--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -33,7 +33,7 @@
       </ion-item>
 
       <ion-item-options side="end">
-        <ion-item-option color="primary" >
+        <ion-item-option color="primary" (click)="exibirAlertaFavorito(atores)">
           <ion-icon slot="icon-only" name="star"></ion-icon>
         </ion-item-option>
       </ion-item-options>
